--- a/TestMAUISimpleApp/Pages/UserListPage.xaml
+++ b/TestMAUISimpleApp/Pages/UserListPage.xaml
@@ -1,7 +1,8 @@
 <?xml version = "1.0" encoding = "UTF-8" ?>
-<ContentPage x:Class="TestMAUISimpleApp.Pages.UserListPage"
-             xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="TestMAUISimpleApp.Pages.UserListPage"
+             xmlns:model="clr-namespace:TestMAUISimpleApp.Models"
              xmlns:local="clr-namespace:TestMAUISimpleApp.ViewModels"
              x:DataType="local:UserListPageViewModel">
 
@@ -29,7 +30,7 @@
         SelectionMode="Single"
         SelectionChanged="OnSelectionChanged">
             <CollectionView.ItemTemplate>
-                <DataTemplate>
+                <DataTemplate x:DataType="model:User">
                     <Grid Padding="10" ColumnDefinitions="*,Auto">
                         <Label Text="{Binding Name}" />
                         <Label Text="{Binding Age}" Grid.Column="1" />
