--- a/TestMAUISimpleApp/AppShell.xaml
+++ b/TestMAUISimpleApp/AppShell.xaml
@@ -3,28 +3,36 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:TestMAUISimpleApp.Pages"
-    xmlns:vm="clr-namespace:TestMAUISimpleApp.ViewModels"
-    x:DataType="vm:BurgerMenuViewModel"
-    FlyoutBehavior="Flyout">
+    FlyoutBehavior="Disabled">
 
     <Shell.TitleView>
         <HorizontalStackLayout HorizontalOptions="Center" Padding="10">
             <Label Text="Header" VerticalOptions="Center" FontAttributes="Bold" />
         </HorizontalStackLayout>
     </Shell.TitleView>
-    
+
     <ShellContent
-        Title="Users"
-        ContentTemplate="{DataTemplate local:UserListPage}"
-        Route="UserListPage"
-        FlyoutItemIsVisible="False"/>
+        Title="Login"
+        ContentTemplate="{DataTemplate local:MainPage}"
+        Route="MainPage"
+        FlyoutItemIsVisible="False" />
 
-    <Shell.FlyoutContent>
-        <VerticalStackLayout Padding="20" Spacing="10">
-            <Label Text="Menu" FontSize="20" FontAttributes="Bold" Margin="0,20"/>
-            <Button Text="Create" Command="{Binding UserClickSaveCommand}" />
-            <Button Text="Some" Command="{Binding UserClickSomeCommand}" />
-        </VerticalStackLayout>
-    </Shell.FlyoutContent>
 
+    <FlyoutItem Title="Users">
+        <ShellContent
+            ContentTemplate="{DataTemplate local:UserListPage}"
+            Route="UserListPage" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Some1">
+        <ShellContent
+            ContentTemplate="{DataTemplate local:SomePage}"
+            Route="SomePage1" />
+    </FlyoutItem>
+
+    <FlyoutItem Title="Some2">
+        <ShellContent
+            ContentTemplate="{DataTemplate local:SomePage}"
+            Route="SomePage2" />
+    </FlyoutItem>
 </Shell>
