--- a/TestMAUISimpleApp/Pages/UserListPage.xaml
+++ b/TestMAUISimpleApp/Pages/UserListPage.xaml
@@ -1,20 +1,25 @@
-<?xml version = "1.0" encoding = "UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TestMAUISimpleApp.Pages.UserListPage"
              xmlns:model="clr-namespace:TestMAUISimpleApp.Models"
              xmlns:local="clr-namespace:TestMAUISimpleApp.ViewModels"
-             x:DataType="local:UserListPageViewModel">
+             x:DataType="local:UserListPageViewModel"
+             Title="Users">
 
-    <Grid Padding="16" RowDefinitions="Auto,Auto,Auto,*" RowSpacing="10">
-        <CollectionView
-        Grid.Row="3"
-        ItemsSource="{Binding Users}"
-        SelectionMode="Single"
-        SelectionChanged="OnSelectionChanged">
+    <Grid Padding="16" RowDefinitions="Auto, *" RowSpacing="15">
+
+        <Button Text="Add" 
+                Command="{Binding AddUserCommand}" 
+                Grid.Row="0" />
+
+        <CollectionView Grid.Row="1"
+                        ItemsSource="{Binding Users}"
+                        SelectionMode="Single"
+                        SelectionChanged="OnSelectionChanged">
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="model:User">
-                    <Grid Padding="10" ColumnDefinitions="*,Auto">
+                    <Grid Padding="10" ColumnDefinitions="*, Auto">
                         <Label Text="{Binding Name}" />
                         <Label Text="{Binding Age}" Grid.Column="1" />
                     </Grid>
@@ -23,6 +28,4 @@
         </CollectionView>
 
     </Grid>
-
-
 </ContentPage>
