--- a/TestMAUISimpleApp/Pages/MainPage.xaml
+++ b/TestMAUISimpleApp/Pages/MainPage.xaml
@@ -4,15 +4,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:TestMAUISimpleApp.ViewModels"
              x:DataType="local:MainPageViewModel">
-    
-    <Shell.TitleView>
-        <HorizontalStackLayout HorizontalOptions="Center" Padding="10">
-            <Label Text="1111" VerticalOptions="Center" FontAttributes="Bold" />
-        </HorizontalStackLayout>
-    </Shell.TitleView>
-    
-    <HorizontalStackLayout HorizontalOptions="Center" VerticalOptions="Center">
+
+    <VerticalStackLayout HorizontalOptions="Center" VerticalOptions="Center" Spacing="20" WidthRequest="200">
+        <Entry Placeholder="Name" Text="{Binding UserName}" FontSize="20"/>
         <Button Text="Users list" Command="{Binding GoToUserListCommand}"/>
-    </HorizontalStackLayout>
+    </VerticalStackLayout>
     
 </ContentPage>
